files/etc/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Fri Apr 20 09:50:37 2018
*nat
:PREROUTING ACCEPT [515:31770]
:INPUT ACCEPT [6:352]
:OUTPUT ACCEPT [68:4266]
:POSTROUTING ACCEPT [6:360]
-A POSTROUTING -o wan -j MASQUERADE
COMMIT
# Completed on Fri Apr 20 09:50:37 2018
# Generated by iptables-save v1.6.0 on Fri Apr 20 09:50:37 2018
*filter
:INPUT DROP [12:588]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2:126]
-A INPUT -i lo -j ACCEPT
-A INPUT -i lan -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.5.3/32 -m comment --comment "vbox host" -j ACCEPT
-A INPUT -s 192.168.5.1/32 -m comment --comment "outer firewall" -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lan -o wan -j ACCEPT
COMMIT
# Completed on Fri Apr 20 09:50:37 2018
